kludgeops/pgadmin4/pgadmin4-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin4
    app.kubernetes.io/component: pgadmin4
    app.kubernetes.io/instance: pgadmin4
  name: pgadmin4
  namespace: pgadmin4
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: pgadmin4
