kludgeops/pgadmin4/pgadmin4-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pgadmin4
    app.kubernetes.io/component: pgadmin4
    app.kubernetes.io/instance: pgadmin4
  name: pgadmin4
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: ""
    name: pgadmin4
    weight: null
